add config for in .env.example

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,7 @@ COINMARKETCAP_API_KEY="CoinMarketCap API key (Get a free one: https://coinmarket
 ETHERSCAN_API_KEY="ETHERSCAN API key (Get a free one: https://etherscan.io/)"
 POLYGONSCAN_API_KEY="POLYGONSCAN API key (Get a free one: https://polygonscan.com/)"
 
-
-
-
-# === For the samples/twilio-spotify sample app ===
-ARTIST_EMAIL="RECEIVER_EMAIL"
-TWILIO_API_KEY="SENDGRID_TWILIO_API_KEY"
-
-SOUNDCHART_APP_ID="soundcharts" # ref: https://doc.api.soundcharts.com/api/v2/doc
-SOUNDCHART_API_KEY="soundcharts"
+OPEN_WEATHER_API_KEY="Open weather API key (Get a free one: https://openweathermap.org/)"
+WORLD_WEATHER_ONLINE_API_KEY="World Weather API key (Get a free one: https://www.worldweatheronline.com/weather-api/)"
+AMBEE_DATA_API_KEY="ambee data API key (Get a free one: https://api-dashboard.getambee.com/)"
+CLIENT_ADDR="CLIENT ADDR"
